# context-matching

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/src/talent_interview_profile_poc/: __init__.py  main.py  settings.py
apps/api/src/talent_interview_profile_poc/application/services/: export_service.py  extraction_service.py  interview_service.py  profile_service.py  talent_service.py  template_service.py
apps/api/src/talent_interview_profile_poc/domain/: enums.py  exceptions.py
apps/api/src/talent_interview_profile_poc/domain/abstractions/: __init__.py  extraction_prompting.py  inference.py  repositories.py
apps/api/src/talent_interview_profile_poc/domain/entities/: __init__.py  records.py
apps/api/src/talent_interview_profile_poc/infrastructure/inference/: inference_gateway_factory.py  mlx_llm_gateway.py  mlx_runtime.py  ollama_llm_gateway.py  prompt_builders.py  stub_llm_gateway.py
apps/api/src/talent_interview_profile_poc/infrastructure/persistence/: database.py  orm_models.py  repositories_sqlalchemy.py  schema.py
apps/api/src/talent_interview_profile_poc/presentation/: deps.py  error_handlers.py
apps/api/src/talent_interview_profile_poc/presentation/routers/: exports.py  extractions.py  (+4 more)
apps/api/src/talent_interview_profile_poc/seed/: __init__.py  it_engineer_interview.yaml
apps/api/tests/: conftest.py  test_api_flow.py  test_inference_gateway_factory.py  test_ollama_gateway.py  test_prompt_builders.py  test_seed_templates.py  test_services.py
(+44 files in other folders)
